hard-gists/4e958d673c51f1fe6f8f/run.log
=== Docker Run Log for 4e958d673c51f1fe6f8f ===
Started at: Mi 29. Okt 15:13:18 CET 2025

[2025-10-29 15:13:18] START: Running container for 4e958d673c51f1fe6f8f
[2025-10-29 15:13:19] SUCCESS: Container e79b9d34699b48387bb252b0bd4ef9d4c4618102cd719526301324a2ee811766 started for 4e958d673c51f1fe6f8f
=== Container logs for 4e958d673c51f1fe6f8f ===
  File "/snippet.py", line 13
    print c
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4e958d673c51f1fe6f8f ===
[2025-10-29 15:13:21] INFO: Container e79b9d34699b48387bb252b0bd4ef9d4c4618102cd719526301324a2ee811766 has stopped
